syntax = "proto3";

package com.cgi.eoss.ftep;

import "common_messages.proto";

option java_multiple_files = true;
option java_package = "com.cgi.eoss.ftep.rpc.worker";

service FtepWorker {
    rpc PrepareEnvironment (JobInputs) returns (JobEnvironment);
    rpc LaunchContainer (JobDockerConfig) returns (LaunchContainerResponse);
    rpc ExecuteServiceCmd (ServiceCmd) returns (ServiceCmdResponse);
    rpc GetPortBindings (Job) returns (PortBindings);
    rpc StopContainer (Job) returns (StopContainerResponse);
    rpc WaitForContainerExit (ExitParams) returns (ContainerExitCode);
    rpc WaitForContainerExitWithTimeout (ExitWithTimeoutParams) returns (ContainerExitCode);
}

message JobInputs {
    Job job = 1;
    repeated JobParam inputs = 2;
}

message JobEnvironment {
    string workingDir = 1;
    string inputDir = 2;
    string outputDir = 3;
}

message JobDockerConfig {
    Job job = 1;
    string dockerImage = 2;
    repeated string binds = 3;
    repeated string ports = 4;
}

message LaunchContainerResponse {
}

message ServiceCmd {
    Job job = 1;
    string command = 2;
}

message ServiceCmdResponse {
}

message PortBindings {
    repeated PortBinding bindings = 1;
}

message PortBinding {
    string portDef = 1;
    string binding = 2;
}

message StopContainerResponse {
}

message ExitParams {
    Job job = 1;
}

message ExitWithTimeoutParams {
    Job job = 1;
    int32 timeout = 2;
}

message ContainerExitCode {
    int32 exitCode = 1;
}